Fix drop target indicator showing as a double border on first and last items

--- a/webview/src/plots/components/styles.module.scss
+++ b/webview/src/plots/components/styles.module.scss
@@ -288,7 +288,7 @@ $gap: 20px;
   position: absolute;
   top: 2px;
   min-height: 32px;
-  border: 2px dotted $accent-color;
+  border-right: 2px dotted $accent-color;
 }
 
 .dropIcon {
